# reveal-hs

./: .gitignore  ChangeLog.md  LICENSE  README.md  index.html  package.yaml  reveal-hs.cabal  stack.yaml
app/: Main.hs
src/: CSS.hs  CodeBlock.hs  Javascript.hs  Library.hs  Presentation.hs  Slide.hs
src/Text/HaskellReveal/: CSS.hs  CodeBlock.hs  Javascript.hs  Presentation.hs  Slide.hs
