cabal-version: 2.2
name:           reveal-hs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/BinderDavid/reveal-hs#readme>
homepage:       https://github.com/BinderDavid/reveal-hs#readme
bug-reports:    https://github.com/BinderDavid/reveal-hs/issues
author:         David Binder
maintainer:     example@example.com
copyright:      2020 David Binder
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/BinderDavid/reveal-hs

library
  exposed-modules:
      CSS
      Javascript
      Library
  other-modules:
      Paths_reveal_hs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , bytestring
    , file-embed
    , text
  default-language: Haskell2010

executable reveal-hs-exe
  main-is: Main.hs
  other-modules:
      Paths_reveal_hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , bytestring
    , file-embed
    , reveal-hs
    , text
  default-language: Haskell2010

